heap size bleh